Mon Jun 19 14:52:25 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Home_Servant_Impl_T.cpp:
        * ciao/Home_Servant_Impl_T.h:
        * ciao/Servant_Impl_T.cpp
        * ciao/Servant_Impl_T.h:

          Reduced the number of template parameters in
          the component servant and home servant template
          base classes.

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:

          Changes to generated servant code corresponding
          the the changes in servant base class code
          described above.

Thu Jun 15 20:13:02 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/be_helper.cpp:

          Uncommented code that outputs our copyright notice. This
          change also elinates an unused arg warning for the
          copyright notice string.

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:

          Added a newline after opening the file for better readability.

Thu Jun 15 18:37:43 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/Config_Handlers/CIAO_Events/CIAO_Events_Handlers.mpc:

          Added ciao_deployment_stub as a base project for
          CIAO_Events_Handlers, to eliminate 'unresolved symbol'
          linking errors. Thanks to Ming Xiong <ming.xiong@vanderbilt.edu>
          for suggesting the fix.

Thu Jun 15 15:10:58 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/be_extern.h:
        * tools/IDL3_to_IDL2/be_init.cpp:
        * tools/IDL3_to_IDL2/be_produce.cpp:

          Changes to keep this backend in sync with changes to the
          TAO_IDL front end - see TAO ChangeLog entry of a few
          minutes ago.

Thu Jun  8 16:07:05 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_Utils_T.cpp (describe_multiplex_receptacle):

          Fixed an error in instantiation of a
          Components::ConnectionDescription valuetype - the actual