@@ -10,45 +10,29 @@ namespace CIAO
 {
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::Swapping_Home_Servant_Impl (
-      EXEC * exe,
-      Session_Container * c,
-      const char* ins_name, const char* obj_id, const char* repo_id)
+                             EXEC,
+                             COMP_SVNT>::Swapping_Home_Servant_Impl (
+    typename EXEC::_ptr_type exe,
+    Session_Container * c,
+    const char* ins_name,
+    const char* obj_id,
+    const char* repo_id)
     : Home_Servant_Impl_Base (c),
       executor_ (EXEC::_duplicate (exe)),
-      ins_name_ (ins_name), obj_id_ (obj_id), repo_id_ (repo_id)
+      ins_name_ (ins_name),
+      obj_id_ (obj_id),
+      repo_id_ (repo_id)
   {
   }
 
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::~Swapping_Home_Servant_Impl ()
+                             EXEC,
+                             COMP_SVNT>::~Swapping_Home_Servant_Impl ()
   {
     const DYNAMIC_SERVANT_MAP_ITERATOR end =
       this->dynamic_servant_map_.end ();
@@ -80,21 +64,11 @@ namespace CIAO
 
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
   void
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::remove_component (
+                             EXEC,
+                             COMP_SVNT>::remove_component (
       ::Components::CCMObject_ptr
       ACE_ENV_ARG_DECL_NOT_USED
     )
@@ -105,6 +79,7 @@ namespace CIAO
       PortableServer::string_to_ObjectId (this->obj_id_);
 
     Dynamic_Component_Servant_Base *servant = 0;
+
     if (this->dynamic_servant_map_.find (oid.in (), servant) == 0)
     {
       servant->destroy (oid);
@@ -115,21 +90,11 @@ namespace CIAO
 
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
   Components::CCMObject_ptr
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::create_component (
+                             EXEC,
+                             COMP_SVNT>::create_component (
       ACE_ENV_SINGLE_ARG_DECL
     )
     ACE_THROW_SPEC ((CORBA::SystemException,
@@ -142,21 +107,11 @@ namespace CIAO
 
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
-  COMP *
+  typename COMP_SVNT::_stub_ptr_type
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::create (
+                             EXEC,
+                             COMP_SVNT>::create (
       ACE_ENV_SINGLE_ARG_DECL
     )
     ACE_THROW_SPEC ((CORBA::SystemException,
@@ -165,13 +120,13 @@ namespace CIAO
     if (this->executor_.in () == 0)
     {
       ACE_THROW_RETURN (CORBA::INTERNAL (),
-                        COMP::_nil ());
+                        COMP_SVNT::_stub_type::_nil ());
     }
 
 
     ::Components::EnterpriseComponent_var _ciao_ec =
       this->executor_->create (ACE_ENV_SINGLE_ARG_PARAMETER);
-    ACE_CHECK_RETURN (COMP::_nil ());
+    ACE_CHECK_RETURN (COMP_SVNT::_stub_type::_nil ());
 
     return this->_ciao_activate_component (_ciao_ec.in ()
                                            ACE_ENV_ARG_PARAMETER);
@@ -181,21 +136,11 @@ namespace CIAO
 
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
-  COMP *
+  typename COMP_SVNT::_stub_ptr_type
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::_ciao_activate_component (
+                             EXEC,
+                             COMP_SVNT>::_ciao_activate_component (
       ::Components::EnterpriseComponent_ptr ec
       ACE_ENV_ARG_DECL
     )
@@ -204,12 +149,12 @@ namespace CIAO
     CORBA::Object_var hobj =
       this->container_->get_home_objref (this
                                     ACE_ENV_ARG_PARAMETER);
-    ACE_CHECK_RETURN (COMP::_nil ());
+    ACE_CHECK_RETURN (COMP_SVNT::_stub_type::_nil ());
 
     Components::CCMHome_var home =
       Components::CCMHome::_narrow (hobj.in ()
                                     ACE_ENV_ARG_PARAMETER);
-    ACE_CHECK_RETURN (COMP::_nil ());
+    ACE_CHECK_RETURN (COMP_SVNT::_stub_type::_nil ());
 
     PortableServer::ObjectId_var oid =
       PortableServer::string_to_ObjectId (this->obj_id_);
@@ -220,72 +165,56 @@ namespace CIAO
         this->repo_id_,
         Container::Component
         ACE_ENV_ARG_PARAMETER);
-    ACE_CHECK_RETURN (COMP::_nil ());
+    ACE_CHECK_RETURN (COMP_SVNT::_stub_type::_nil ());
 
     Dynamic_Component_Servant_Base *svt =
-      new Dynamic_Component_Servant
-       <COMP_SVNT, COMP_EXEC, COMP_EXEC_VAR, EXEC, EXEC_VAR, COMP>
-          (ec, home.in (), this->ins_name_, this, this->container_);
+      new Dynamic_Component_Servant<COMP_SVNT> (ec,
+                                                home.in (),
+                                                this->ins_name_,
+                                                this,
+                                                this->container_);
 
     this->container_->add_servant_map (oid, svt ACE_ENV_ARG_PARAMETER);
-    ACE_CHECK_RETURN (COMP::_nil ());
+    ACE_CHECK_RETURN (COMP_SVNT::_stub_type::_nil ());
 
     this->dynamic_servant_map_.bind (oid.in (), svt);
 
-    COMP_VAR ho = COMP::_narrow (objref.in ()
-                                 ACE_ENV_ARG_PARAMETER);
-
-    ACE_CHECK_RETURN (COMP::_nil ());
+    typename COMP_SVNT::_stub_var_type ho =
+      COMP_SVNT::_stub_type::_narrow (objref.in ()
+                                      ACE_ENV_ARG_PARAMETER);
+    ACE_CHECK_RETURN (COMP_SVNT::_stub_type::_nil ());
 
     return ho._retn ();
   }
 
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
   void
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::update_component_map (
+                             EXEC,
+                             COMP_SVNT>::update_component_map (
     PortableServer::ObjectId &oid)
   {
     Dynamic_Component_Servant_Base *servant = 0;
+
     if (this->dynamic_servant_map_.find (oid, servant) == 0)
-    {
-      servant->update_destroy_count ();
-      this->dynamic_servant_map_.unbind (oid);
-    }
+      {
+        servant->update_destroy_count ();
+        this->dynamic_servant_map_.unbind (oid);
+      }
+
     return;
   }
 
   template <typename BASE_SKEL,
             typename EXEC,
-            typename EXEC_VAR,
-            typename COMP,
-            typename COMP_VAR,
-            typename COMP_EXEC,
-            typename COMP_EXEC_VAR,
             typename COMP_SVNT>
   void
   Swapping_Home_Servant_Impl<BASE_SKEL,
-                    EXEC,
-                    EXEC_VAR,
-                    COMP,
-                    COMP_VAR,
-                    COMP_EXEC,
-                    COMP_EXEC_VAR,
-                    COMP_SVNT>::_ciao_passivate_component (
-      COMP *comp
+                             EXEC,
+                             COMP_SVNT>::_ciao_passivate_component (
+      typename COMP_SVNT::_stub_ptr_type comp
       ACE_ENV_ARG_DECL
     )
     ACE_THROW_SPEC ((CORBA::SystemException))
@@ -305,6 +234,7 @@ namespace CIAO
 
       servant->ciao_passivate (ACE_ENV_SINGLE_ARG_PARAMETER);
       ACE_CHECK;
+
       this->component_map_.unbind (oid.in ());
     }
   }
